chore: Revert to insert/extract from send/receive - much clearer in most contexts.